# swaggo-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  version-check.yml
src/: generator.rs  lib.rs  main.rs  models.rs  parser.rs
