[package]
name = "swaggo-rust"
version = "0.1.0"
edition = "2021"
authors = ["budhilaw"]
description = "A Rust implementation of swaggo/swag for generating Swagger 2.0 docs from Go annotations"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
walkdir = "2.4"
nom = "7.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
once_cell = "1.19"
url = "2.4"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.9"
